# streamdeck-controls

./: .gitignore  LICENSE  MANIFEST.in  README.md  Taskfile.yml  analysis.md  app.py  bins.py  device.py  hue.py  hue_v1.py  kitchencontrols.py  memory.py  pyproject.toml  requirements.txt  rgb_recovery.py  sdsystem.py  setup.cfg  streamdeck.py
src/: sdsystem.py  simple_device_test.py  streamdeck.py
src/sd_controls/: sdsystem.py  sprites.py  streamdeck.py  virtualdeck.py
tests/: simple_demo.py
