[metadata]
name = sd_controls
version = attr: sd_controls.__version__
authors = Niklas Rousset
author_email = byrousset@gmail.com
description = A small and simple framework for streamdeck applications
keywords = streamdeck
license = MIT
long_description = file: README.md
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
url = https://github.com/niklasr22/streamdeck-controls
project_urls =
    Bug Tracker = https://github.com/niklasr22/streamdeck-controls/issues


[options]
include_package_data = True
python_requires = >=3.11
install_requires =
    hid
    Pillow
    requests
